<resources>
    <string name="app_name">Mobibuz</string>
    <string name="module_name">ClearScan</string>
    <string name="admob_ad_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="action_settings">Settings</string>
    <string name="scanning">Scanning</string>
    <string name="done">Save</string>
    <string name="scan">Next</string>
    <string name="cantCrop">Can\'t crop the image, change the points</string>
    <string name="ok">OK</string>
    <string name="loading">Loading…</string>
    <string name="applying_filter">Applying filter</string>
    <string name="low_memory">Low Memory</string>
    <string name="low_memory_message">Your phone is low on memory. You may experience lag while editing images.</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="cover_whole">Cover Whole</string>
    <string name="scanning_">Scanning…</string>
    <string name="save_as">Save as</string>
    <string name="share">Share</string>
    <string name="quit_scanning_msg">Are you sure you want to discard scanning process?</string>
    <string name="select_all">Select All</string>
    <string name="str_done">Done</string>
    <string name="grey_mode">Gray Mode</string>
    <string name="magic_color">Magic color</string>
    <string name="original">Original</string>
    <string name="b_w_1"><![CDATA[B & W 1]]></string>
    <string name="b_w_2"><![CDATA[B & W 2]]></string>
    <string name="str_next">Next</string>
    <string name="b_w_3"><![CDATA[B & W3]]></string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="select_picture">Select Picture</string>
    <string name="something_went_wrong">Something went wrong. Please try again!</string>
    <string name="no_app_handle">No app found on your device to handle this.</string>
    <string name="retake">Retake</string>
    <string name="filter">Filters</string>
    <string name="left">Left</string>
    <string name="all">All</string>
    <string name="confirm_delete">Confirm Delete?</string>
    <string name="discard_changes">Are you sure you want to exit?</string>
    <string name="apply_same_filter_msg">Do you want to apply the same filter to all images in this document?</string>
    <string name="camera_uncertain_detection">"Uncertain detection"</string>
    <string name="camera_small_area">"Move Camera closer to document"</string>
    <string name="camera_distorted">"Hold camera parallel to document"</string>
    <string name="processed_images_file">cropdemo%1$016x.%2$s</string>
    <string name="camera_shot_busy">Camera busy</string>
    <string name="camera_shot_not_stable">Camera is shaking</string>
    <string name="camera_shot_focus_failed">Cannot focus camera. Try one more time.</string>
    <string name="camera_looking_for_document">Looking for the document</string>
    <string name="ocr">OCR</string>
    <string name="bar_code">Barcode/QR Scanner</string>
    <string name="document_scanner">Doc Scanner</string>
    <string name="str_camera">Camera</string>
    <string name="media">Media</string>
    <string name="take_picture">Take Picture</string>
    <string name="scan_bar_qr_code">Scan Barcode or QR code</string>
    <string name="no_scanned_documents">You haven’t scanned any documents yet!</string>
    <string name="rename">Rename</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="delete">Delete</string>
    <string name="please_select_files">Please Select files</string>
    <string name="prefix_document">Document_</string>
    <string name="creating_pdf">Creating PDF</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="please_name_file">Please enter file name.</string>
    <string name="pdf_created_successfully">PDF Created Successfully!</string>
    <string name="continue_editing">Now you can continue editing your PDF</string>
    <string name="delete_msg">Once deleted, your file cannot be recovered!\nAre you sure you want to delete?</string>
    <string name="ocr_lang_warning">Currently recognizing only English/Latin characters.</string>
    <string name="rename_msg">It’s easier to find files when you name them right!</string>
    <string name="rename_file">Rename File</string>
    <string name="search">Search by name</string>
    <string name="home">Home</string>
    <string name="premium">Premium</string>
    <string name="scan_txt">Scan</string>
    <string name="tags">Tags</string>
    <string name="jpg">JPG</string>
    <string name="total">Total</string>
    <string name="files">Files</string>
    <string name="file">file</string>
    <string name="rename_success_msg">File renamed successfully</string>
    <string name="file_name_same_msg">File name should not be the same.</string>
    <string name="delete_success_msg">File deleted successfully.</string>
    <string name="path">Path : </string>
    <string name="do_want_open_file">Do you want to open this file?</string>
    <string name="open">OPEN</string>
    <string name="no">NO</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="select_target_document">Select a target document</string>
    <string name="file_copied_successfully">File Copied Successfully.</string>
    <string name="file_moved_successfully">File Moved Successfully.</string>
    <string name="easier_faster">
<![CDATA[ Easier & Faster ]]>
</string>
    <string name="ocr_to_text">OCR to Text</string>
    <string name="qr_bar_code">QR/Bar Code</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="coming">Coming</string>
    <string name="soon">Soon</string>
    <string name="recent_documents">Recent Documents</string>
    <string name="scanned_documents">Scanned Documents</string>
    <string name="exit">Exit</string>
    <string name="exit_msg">Are you sure you want to close this application?</string>
    <string name="or">OR</string>
    <string name="share_as_pdf">Share as PDF</string>
    <string name="share_as_image">Share as JPG</string>
    <string name="same_folder_already_exist">Same document already exists. Please try another one!</string>
    <string name="same_file_already_exist">Filename already in use! Choose another one.</string>
    <string name="unable_to_move_in_same_folder">Unable to move file in same document. Please choose another document.</string>
    <string name="flash_scan">@string/app_name</string>
    <string name="pdf_scanner_doc_scanner">ClearScan — Scan to PDF Expert</string>
    <string name="click_doc_scanner">Just tap the \"Doc Scanner\" to scan documents — they\'ll appear here.</string>
    <string name="no_file">No files in this document.</string>
    <string name="click_camera">Just click the \"Camera or Media\" icon to add your \n files in this document.</string>
    <string name="starred">Starred</string>
    <string name="not_starred">Not Starred</string>
    <string name="share_your_doc">Share your Doc</string>
    <string name="my_favourites">My Favorites</string>
    <string name="no_favorite_document">You haven’t saved any documents yet.”</string>
    <string name="click_star_doc">Tap the heart icon to save documents for quick access.</string>
    <string name="view_more">View more</string>
    <string name="view_all">View all</string>
    <string name="no_document_found">No Document found!</string>
    <string name="select_recognize_mode">Select Text Area</string>
    <string name="whole_text">Whole Text</string>
    <string name="single_text">Single Text</string>
    <string name="scan_now_msg">Start now by tapping on the icons above.</string>
    <string name="save_as_text">Save as Text</string>
    <string name="oops_no_txt_found">Oops! No text found.</string>
    <string name="view_image">View Image</string>
    <string name="prefix_file">File_</string>
    <string name="file_saved_successfully">File saved successfully.</string>
    <string name="tap_camera_txt">Tap on camera to add new documents to this file.</string>
    <string name="tap_camera_icon">Tap camera icon</string>
    <string name="unable_to_copy_in_same_folder">Unable to copy file in same document. Please choose another document.</string>
    <string name="please_add_more_documents">Please add more documents for this operation.</string>
    <string name="show_camera_media__floating_view">Show camera media floating view</string>
    <string name="permission_setting_screen">You have denied some permissions. Kindly allow through "settings"</string>
    <string name="permission_storage_cameraa">This app needs permission of camera and storage to access some features. Click on Settings to allow them.</string>
    <string name="permission_setting_cameraa">This app needs permission of camera and all media to access some features. Click on Settings to allow them.</string>
    <string name="app_needs_permission">These permissions are compulsory to run the ClearScan. Do you want to continue?</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="exit_app">No, Exit App</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="edit">Edit</string>
    <string name="translate">Translate</string>
    <string name="rescan">Re-Scan</string>
    <string name="ocr_result">OCR Result</string>
    <string name="text_copied_clipboard">Text copied to clipboard</string>
    <string name="re_scanned_successfully">Rescanned successfully</string>
    <string name="unable_to_fetch_documents">Unable to fetch documents. Something went wrong!</string>
    <string name="suffix_app_name">@string/app_name</string>
    <string name="share_your_text">Share your text</string>
    <string name="share_as_plain_text">Share as plain text</string>
    <string name="share_as_text_file">Share as text file</string>
    <string name="ocr_result_text">OCR Scan Result</string>
    <string name="no_ocr_doc_title">No OCR scanned yet!</string>
    <string name="no_ocr_doc_msg">Start using OCR by clicking on the icons above.</string>
    <string name="no_text_found">Oops! No text found in this image.</string>
    <string name="scanned_text">Scanned Text</string>
    <string name="crop">Crop</string>
    <string name="copy_right_text">Copyright © 2025 AdCounty Media India Ltd. All rights reserved.</string>
    <string name="all_righs_reserved">All rights reserved.</string>
    <string name="skip">Skip</string>
    <string name="got_it">Got It</string>
    <string name="product_tour">Product Tour</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_app">About App</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="app_version_about">App Version</string>
    <string name="website">Website</string>
    <string name="share_the_app">Share the App</string>
    <string name="modify_scan">Modify Scan</string>
    <string name="settings">Settings</string>
    <string name="add_signature">Add Signature</string>
    <string name="ask_pdf_name_dialog_title">Export PDF</string>
    <string name="enter_pdf_name">PDF Name</string>
    <string name="compressed">Compressed</string>
    <string name="pdf_quality">PDF Quality</string>
    <string name="page_size">Page Size</string>
    <string name="save_pdf">Save PDF</string>
    <string name="anti_counterfeit">Anti\ncounterfeit</string>
    <string name="pdf_password">PDF\nPassword</string>
    <string name="pdf_signature">PDF\nSignature</string>
    <string name="file_compression">File\nCompression</string>
    <string name="ocr_monthly_plan">OCR Monthly</string>
    <string name="premium_access">Premium Access</string>
    <string name="get_from_google_drive">Get Data From Google Drive</string>
</resources>