<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:drawableTop="@drawable/ic_anti_counterfiet"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:maxLines="1"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/anti_counterfeit"
        android:textColor="#222222"
        android:textSize="12sp"
        android:visibility="visible"
        app:fontFamily="@font/roboto_medium" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#70000000"
        android:drawableTop="@drawable/ic_signature"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:maxLines="1"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/pdf_signature"
        android:textColor="#222222"
        android:textSize="12sp"
        android:visibility="visible"
        app:fontFamily="@font/roboto_medium" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#70000000"
        android:drawableTop="@drawable/ic_password"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:maxLines="1"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/pdf_password"
        android:textColor="#222222"
        android:textSize="12sp"
        app:fontFamily="@font/roboto_medium" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#70000000"
        android:drawableTop="@drawable/ic_compression"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:maxLines="1"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/file_compression"
        android:textColor="#222222"
        android:textSize="12sp"
        app:fontFamily="@font/roboto_medium" />
</LinearLayout>